--- a/multimedia.html
+++ b/multimedia.html
@@ -80,7 +80,7 @@
                 <h3 class="text-center">video</h3>
                 <video src="img/Detenido en Fuensalida un hombre atrincherado en su vivienda.mp4" class="video" controls autoplay muted></video>
                 <h3 class="text-center">audio</h3>
-                <audio src="img/audio presentación.mp3" controls class="audio"></audio>
+                <audio src="img/" controls class="audio"></audio>
             </div>
 
         </main>
