--- a/multimedia.html
+++ b/multimedia.html
@@ -12,7 +12,7 @@
     <div class="container shadow">
         <header>
             <div class="row align-items-center">
-                <div class="col-3"><img src="img/logoiesfseif.png" alt="logo" width="250"></div>
+                <div class="col-3"><img src="img/13_.jpg" alt="logo" width="250" id="logo13"> </div>
                 <div class="col-9">
                     <span id="btnmenu" onclick="opendrawer()">&#9776;</span>
                     <nav id="menu">
@@ -70,17 +70,17 @@
                 <div id="multimedia" class="py-3">
                     <h2 class="text-center">MULTIMEDIA</h2>
                 <h3>Galería</h3>
-               <img src="img/colegiosanjose.jpg" alt="" class="col-3">
-               <img src="img/fiestas.jpg" alt="" class="col-3">
+               <img src="img/colegiosanjose.png" alt="" class="col-3">
+               <img src="img/fiestas.png" alt="" class="col-3">
                <img src="img/glorietareformada.jpg" alt="" class="col-3">
                <img src="img/pepeja.webp" alt="" class="col-3">
                <img src="img/picota.jpg" alt="" class="col-3">
                <img src="img/furbol.jpg" alt="" class="col-3">
                 <div class="cb"></div>
                 <h3 class="text-center">video</h3>
-                <video src="img/Detenido en Fuensalida un hombre atrincherado en su vivienda.mp4" class="video" controls autoplay muted></video>
+                <video src="img/Fuensalida - Drones Indy Air (1080p, h264, youtube).mp4" class="video" controls autoplay muted></video>
                 <h3 class="text-center">audio</h3>
-                <audio src="img/" controls class="audio"></audio>
+                <audio src="" controls class="audio"></audio>
             </div>
 
         </main>
