--- a/tablas.html
+++ b/tablas.html
@@ -271,7 +271,7 @@
         </main
         
         <footer>
-            <h1 class="bg-azul-o text-center text-white py-3">&copy; Paco Pulido</h1>
+            <h1 class="bg-azul-o text-center text-white py-3">&copy; Rodrigo Rico</h1>
         </footer>
     </div>
     <script>
